--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
+displayName=Chat Panel
+author=Yenof
+description=Sidebar chat panel.
+tags=Chat, panel, sidebar, text, cc,
 plugins=com.example.ExamplePlugin
