--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -2,4 +2,4 @@ displayName=Chat Panel
 author=Yenof
 description=Sidebar chat panel.
 tags=Chat, panel, sidebar, text, cc,
-plugins=com.example.ExamplePlugin
+plugins=com.chatpanel.Chatpanelplugin
