--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -2,4 +2,4 @@ displayName=Chat Panel
 author=Yenof
 description=Sidebar chat panel.
 tags=Chat, panel, sidebar, text, cc,
-plugins=com.chatpanel.chatpanelplugin
+plugins=net.runelite.client.plugins.chatpanel.ChatPanelPlugin
