--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
 displayName=Chat Panel
 author=Yenof
 description=Sidebar chat panel.
-tags=Chat, panel, sidebar, text, cc,
+tags=Chat, panel, sidebar, text, cc, accessibility,
 plugins=net.runelite.client.plugins.chatpanel.ChatPanelPlugin
