Added tag "font style"

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
 displayName=Chat Panel
 author=Yenof
 description=Sidebar chat panel.
-tags=Chat, panel, sidebar, text, cc, accessibility, examine, copy, Private, timestamp,
+tags=Chat, panel, sidebar, text, cc, accessibility, examine, copy, Private, timestamp, font style,
 plugins=net.runelite.client.plugins.chatpanel.ChatPanelPlugin
