--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
 displayName=Chat Panel
 author=Yenof
-description=Sidepanel and pop out chat.
+description=Side panel and pop out chat window.
 tags=Chat, panel, sidebar, text, cc, accessibility, examine, copy, Private, timestamp, font style, pop out,
 plugins=com.chatpanel.ChatPanelPlugin
